Fixes in scripts and documents for Android builds from Windows.